[package]
name = "operational"
version = "0.0.2"
authors = ["Sam Rijs <srijs@airpost.net>"]
description = "Operational Monad"
license = "MIT"
repository = "https://github.com/srijs/rust-operational"
documentation = "https://srijs.github.io/rust-operational/operational/"
keywords = ["free", "operational", "monad", "program", "interpreter"]
